--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "first Heroku Transfer",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "nodemon index.js",
     "test": ""
   },
   "repository": {
@@ -26,6 +26,9 @@
     "express": "^4.17.1",
     "fs": "0.0.1-security",
     "http": "0.0.1-security",
+    "jquery": "^3.6.0",
+    "nodemon": "^2.0.7",
+    "popper.js": "^1.16.1",
     "serve-static": "^1.14.1"
   },
   "devDependencies": {
