--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "first Heroku Transfer",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server.js",
+    "start": "node server.js",
     "test": ""
   },
   "repository": {
