--- a/package.json
+++ b/package.json
@@ -32,15 +32,7 @@
     "serve-static": "^1.14.1"
   },
   "devDependencies": {
-    "eslint": "^7.22.0",
-    "connect": "^3.7.0",
-    "express": "^4.17.1",
-    "fs": "0.0.1-security",
-    "http": "0.0.1-security",
-    "jquery": "^3.6.0",
-    "nodemon": "^2.0.7",
-    "popper.js": "^1.16.1",
-    "serve-static": "^1.14.1"
+    "eslint": "^7.22.0"
   },
   "engines": {
     "node": "14.x"
