--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "mobirises",
   "version": "1.0.0",
-  "description": "first Heroku Transfer",
+  "description": "First Heroku Transfer",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "test": ""
+    "start": "nodemon server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
