--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "connect": "^3.7.0",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
+    "heroku": "^7.51.0",
     "http": "0.0.1-security",
     "jquery": "^3.6.0",
     "nodemon": "^2.0.7",
@@ -32,7 +33,8 @@
     "serve-static": "^1.14.1"
   },
   "devDependencies": {
-    "eslint": "^7.22.0"
+    "eslint": "^7.22.0",
+    "express": "^4.17.1"
   },
   "engines": {
     "node": "14.x"
