--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/baobaoack000/Mobirises.git"
+    "url": "git+https://github.com/baobaoack000/Mobirises-Heroku-"
   },
   "keywords": [
     "Heroku",
@@ -18,12 +18,11 @@
   "author": "baobaoack000",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/baobaoack000/Mobirises/issues"
+    "url": "https://github.com/baobaoack000/Mobirises-Heroku-/issues"
   },
-  "homepage": "https://github.com/baobaoack000/Mobirises#readme",
+  "homepage": "https://github.com/baobaoack000/Mobirises-Heroku-#readme",
   "dependencies": {
     "connect": "^3.7.0",
-    "express": "^4.17.1",
     "fs": "0.0.1-security",
     "heroku": "^7.51.0",
     "http": "0.0.1-security",
