--- a/package.json
+++ b/package.json
@@ -29,11 +29,14 @@
     "jquery": "^3.6.0",
     "nodemon": "^2.0.7",
     "pg": "^8.5.1",
+    "pg-promise": "^10.10.1",
     "popper.js": "^1.16.1",
     "serve-static": "^1.14.1"
   },
   "devDependencies": {
-    "eslint": "^7.22.0"
+    "dotenv": "^8.2.0",
+    "eslint": "^7.22.0",
+    "nodemon": "^2.0.7"
   },
   "engines": {
     "node": "14.x"
